<resources>
    <string name="app_name" translatable="false">Billingual</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_register" translatable="false">Register</string>
    <string name="default_web_client_id" translatable="false">566054808175-3a7mvq6q5k1jm02ap31i1bmcslf8kh9r.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>


    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title">Change app language</string>


    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="return_to_menu">Back to menu</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="switch_to_login">Switch to login</string>
    <string name="create_account">Create account</string>
    <string name="enter_your_nick">Enter your nick</string>
    <string name="confirm">Confirm</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="score">Score</string>
    <string name="write_your_email_address">Write your email address</string>
    <string name="change_password">Change password</string>
    <string name="back_to_login">Back to login</string>
    <string name="search_by_nick">Search by nick...</string>
    <string name="search">Search</string>
    <string name="login_title">LOGIN</string>
    <string name="word_quiz">Word quiz</string>
    <string name="grammar">Grammar</string>
    <string name="mistakes">Mistakes</string>
    <string name="rankings">Rankings</string>
    <string name="settings">Settings</string>
    <string name="admin_panel">Admin panel</string>
    <string name="account">Account</string>
    <string name="change_nick">Change nick</string>
    <string name="switch_to_dark_mode">Switch to dark mode</string>
    <string name="actions">Actions</string>
    <string name="log_out">Log out</string>
    <string name="default_language_code" translatable="false">pl</string>
    <string name="title_activity_grammar_panel" translatable="false">GrammarPanel</string>
    <string name="title_activity_mistake_container" translatable="false">MistakeContainer</string>
    <string name="delete_from_mistakes">Delete from mistakes</string>
    <string name="simple_past_explanation" translatable="false"><![CDATA["Simple Past (Czas Przeszły Prosty)\n\nUżycie: Simple Past używamy, aby opisać zakończone czynności lub sytuacje, które miały miejsce w określonym punkcie w przeszłości.\n\nKonstrukcja:  W zdaniach twierdzących używamy czasownika w formie przeszłej.\nI went to the store. (Poszedłem do sklepu).\n        \n\nW zdaniach pytających używamy operatora did oraz bezokolicznika czasownika.\n        \nPrzykład: Did you finish your homework?\n        \nTłumaczenie: Czy skończyłeś pracę domową?.\n       \nW zdaniach przeczących dodajemy didn't przed bezokolicznikiem czasownika.\n       \nPrzykład: She didn't eat lunch.\n\n        \nTłumaczenie: Ona nie zjadła lunchu. "]]></string>
    <string name="past_continuous_explanation" translatable="false"><![CDATA[Past Continuous (Czas Przeszły Ciągły)\n\nUżycie: Past Continuous stosujemy, aby opisać działania, które trwały w określonym momencie w przeszłości.\n\nKonstrukcja: Konstruujemy Past Continuous za pomocą czasownika to be w czasie przeszłym (was/were) oraz formy ing czasownika głównego.\n\nPrzykład: They were playing football when it started raining.\n\nTłumaczenie: Oni grali w piłkę, gdy zaczęło padać.]]></string>
    <string name="present_perfect_explanation" translatable="false"><![CDATA["Present Perfect (Czas Terazniejszy Uzupełniający)\n        \n\nUżycie: Present Perfect używamy, aby opisać czynności, które miały miejsce w przeszłości, ale mają związek z teraźniejszością lub skutkiem w teraźniejszości.\n        \n\nKonstrukcja: Składa się z czasownika to have w formie teraźniejszej (have/has) oraz formy trzeciej czasownika głównego (czasownik w formie przeszłej lub czasownik regularny zakończony na –ed).\n        \n\nPrzykład: I have visited Paris several times.  \n\n: Byłem w Paryżu kilka razy.\n        \n\nMożemy także użyć Present Perfect z partykułą just lub recently, aby podkreślić, że czynność miała miejsce niedawno.\n        \n\nPrzykład: She has just finished her homework.\n        \n\nTłumaczenie: Ona właśnie skończyła pracę domową "]]></string>
</resources>