<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">


    <Button
        android:id="@+id/buttonBackToLoginPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle"
        android:text="@string/back_to_login"
        app:layout_constraintEnd_toEndOf="@+id/buttonChangePassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddressReset"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressReset"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressReset" />

    <EditText
        android:id="@+id/editTextEmailAddressReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/write_your_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

</androidx.constraintlayout.widget.ConstraintLayout>