<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C13E0149"
    tools:context=".fragments.MenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Quiz_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Quiz_texView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/word_quiz"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Gramatic_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Gramatic_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/grammar"
                    android:textSize="26sp" />
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Mistakes_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Mistakes_texView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/mistakes"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Rankings_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Rankings_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/rankings"
                    android:textSize="26sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Settings_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Settings_texView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="225dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Game_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/quiz_icon" />

                <TextView
                    android:id="@+id/Game_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/admin_panel"
                    android:textSize="26sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>